bug 21108 - revert behaviour to always allowing collapsing of servicepane groups (r=DesignerSteve)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@18581 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -634,10 +634,15 @@ sb-servicepane-group hbox.servicepane-group-header-wrapper {
 }
 
 sb-servicepane-group[collapsedChildren="true"] hbox.servicepane-group-header-wrapper:-moz-drag-over,
-sb-servicepane-group.collapsible hbox.servicepane-group-header-wrapper {
+/* Commented out per bug 21108
+ * sb-servicepane-group.collapsible hbox.servicepane-group-header-wrapper {
+ */
+sb-servicepane-group hbox.servicepane-group-header-wrapper:hover {
   background-position: center -20px;
 }
-sb-servicepane-group.collapsible hbox.servicepane-group-header-wrapper:active {
+/* Commented out per bug 21108
+ * sb-servicepane-group.collapsible hbox.servicepane-group-header-wrapper:active { */
+sb-servicepane-group hbox.servicepane-group-header-wrapper:active {
   background-position: center -40px;
 }
 
